builds/tests/263/data/attachments/3524e6222bde1bff.txt
2026-05-31 18:51:53,406 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-05-31 18:51:53,407 INFO     yoyo.migrations —  - applying step 0
2026-05-31 18:51:53,407 INFO     yoyo.migrations —  - applying step 1
2026-05-31 18:51:53,407 INFO     yoyo.migrations —  - applying step 2
2026-05-31 18:51:53,407 INFO     yoyo.migrations —  - applying step 3
2026-05-31 18:51:53,408 INFO     yoyo.migrations —  - applying step 4
2026-05-31 18:51:53,408 INFO     yoyo.migrations —  - applying step 5
2026-05-31 18:51:53,408 INFO     yoyo.migrations —  - applying step 6
2026-05-31 18:51:53,408 INFO     yoyo.migrations —  - applying step 7
2026-05-31 18:51:53,408 INFO     yoyo.migrations —  - applying step 8
2026-05-31 18:51:53,408 INFO     yoyo.migrations —  - applying step 9
2026-05-31 18:51:53,409 INFO     yoyo.migrations —  - applying step 10
2026-05-31 18:51:53,409 INFO     yoyo.migrations —  - applying step 11
2026-05-31 18:51:53,409 INFO     yoyo.migrations —  - applying step 12
2026-05-31 18:51:53,409 INFO     yoyo.migrations —  - applying step 13
2026-05-31 18:51:53,410 INFO     yoyo.migrations —  - applying step 14
2026-05-31 18:51:53,411 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-05-31 18:51:53,412 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-05-31 18:51:53,412 INFO     yoyo.migrations —  - applying step 0
2026-05-31 18:51:53,413 INFO     yoyo.migrations —  - applying step 1
2026-05-31 18:51:53,414 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-05-31 18:51:53,414 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-05-31 18:51:53,415 INFO     yoyo.migrations —  - applying step 0
2026-05-31 18:51:53,416 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-05-31 18:51:53,417 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-05-31 18:51:53,417 INFO     yoyo.migrations —  - applying step 0
2026-05-31 18:51:53,417 INFO     yoyo.migrations —  - applying step 1
2026-05-31 18:51:53,418 INFO     yoyo.migrations —  - applying step 2
2026-05-31 18:51:53,418 INFO     yoyo.migrations —  - applying step 3
2026-05-31 18:51:53,418 INFO     yoyo.migrations —  - applying step 4
2026-05-31 18:51:53,418 INFO     yoyo.migrations —  - applying step 5
2026-05-31 18:51:53,418 INFO     yoyo.migrations —  - applying step 6
2026-05-31 18:51:53,419 INFO     yoyo.migrations —  - applying step 7
2026-05-31 18:51:53,419 INFO     yoyo.migrations —  - applying step 8
2026-05-31 18:51:53,419 INFO     yoyo.migrations —  - applying step 9
2026-05-31 18:51:53,420 INFO     yoyo.migrations —  - applying step 10
2026-05-31 18:51:53,420 INFO     yoyo.migrations —  - applying step 11
2026-05-31 18:51:53,420 INFO     yoyo.migrations —  - applying step 12
2026-05-31 18:51:53,420 INFO     yoyo.migrations —  - applying step 13
2026-05-31 18:51:53,420 INFO     yoyo.migrations —  - applying step 14
2026-05-31 18:51:53,421 INFO     yoyo.migrations —  - applying step 15
2026-05-31 18:51:53,421 INFO     yoyo.migrations —  - applying step 16
2026-05-31 18:51:53,422 INFO     yoyo.migrations —  - applying step 17
2026-05-31 18:51:53,422 INFO     yoyo.migrations —  - applying step 18
2026-05-31 18:51:53,422 INFO     yoyo.migrations —  - applying step 19
2026-05-31 18:51:53,422 INFO     yoyo.migrations —  - applying step 20
2026-05-31 18:51:53,423 INFO     yoyo.migrations —  - applying step 21
2026-05-31 18:51:53,423 INFO     yoyo.migrations —  - applying step 22
2026-05-31 18:51:53,425 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-05-31 18:51:53,425 INFO     yoyo.migrations — Applying 0005_income_logging
2026-05-31 18:51:53,426 INFO     yoyo.migrations —  - applying step 0
2026-05-31 18:51:53,426 INFO     yoyo.migrations —  - applying step 1
2026-05-31 18:51:53,426 INFO     yoyo.migrations —  - applying step 2
2026-05-31 18:51:53,426 INFO     yoyo.migrations —  - applying step 3
2026-05-31 18:51:53,427 INFO     yoyo.migrations —  - applying step 4
2026-05-31 18:51:53,427 INFO     yoyo.migrations —  - applying step 5
2026-05-31 18:51:53,428 INFO     yoyo.migrations —  - applying step 6
2026-05-31 18:51:53,428 INFO     yoyo.migrations —  - applying step 7
2026-05-31 18:51:53,428 INFO     yoyo.migrations —  - applying step 8
2026-05-31 18:51:53,428 INFO     yoyo.migrations —  - applying step 9
2026-05-31 18:51:53,428 INFO     yoyo.migrations —  - applying step 10
2026-05-31 18:51:53,428 INFO     yoyo.migrations —  - applying step 11
2026-05-31 18:51:53,429 INFO     yoyo.migrations —  - applying step 12
2026-05-31 18:51:53,429 INFO     yoyo.migrations —  - applying step 13
2026-05-31 18:51:53,429 INFO     yoyo.migrations —  - applying step 14
2026-05-31 18:51:53,429 INFO     yoyo.migrations —  - applying step 15
2026-05-31 18:51:53,429 INFO     yoyo.migrations —  - applying step 16
2026-05-31 18:51:53,429 INFO     yoyo.migrations —  - applying step 17
2026-05-31 18:51:53,429 INFO     yoyo.migrations —  - applying step 18
2026-05-31 18:51:53,430 INFO     yoyo.migrations —  - applying step 19
2026-05-31 18:51:53,430 INFO     yoyo.migrations —  - applying step 20
2026-05-31 18:51:53,430 INFO     yoyo.migrations —  - applying step 21
2026-05-31 18:51:53,430 INFO     yoyo.migrations —  - applying step 22
2026-05-31 18:51:53,430 INFO     yoyo.migrations —  - applying step 23
2026-05-31 18:51:53,430 INFO     yoyo.migrations —  - applying step 24
2026-05-31 18:51:53,430 INFO     yoyo.migrations —  - applying step 25
2026-05-31 18:51:53,431 INFO     yoyo.migrations —  - applying step 26
2026-05-31 18:51:53,431 INFO     yoyo.migrations —  - applying step 27
2026-05-31 18:51:53,431 INFO     yoyo.migrations —  - applying step 28
2026-05-31 18:51:53,431 INFO     yoyo.migrations —  - applying step 29
2026-05-31 18:51:53,431 INFO     yoyo.migrations —  - applying step 30
2026-05-31 18:51:53,431 INFO     yoyo.migrations —  - applying step 31
2026-05-31 18:51:53,431 INFO     yoyo.migrations —  - applying step 32
2026-05-31 18:51:53,432 INFO     yoyo.migrations —  - applying step 33
2026-05-31 18:51:53,432 INFO     yoyo.migrations —  - applying step 34
2026-05-31 18:51:53,434 INFO     yoyo.migrations —  - applying step 35
2026-05-31 18:51:53,434 INFO     yoyo.migrations —  - applying step 36
2026-05-31 18:51:53,435 INFO     yoyo.migrations —  - applying step 37
2026-05-31 18:51:53,435 INFO     yoyo.migrations —  - applying step 38
2026-05-31 18:51:53,436 INFO     yoyo.migrations —  - applying step 39
2026-05-31 18:51:53,438 INFO     yoyo.migrations —  - applying step 40
2026-05-31 18:51:53,440 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-05-31 18:51:53,446 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-05-31 18:51:53,447 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 221, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 511, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
